     http://www.lavrsen.dk/twiki/bin/view/Motion/PreCaptureRedesign (Dag Erlandsson)

Bugfixes
   * Handle mjpeg decoding and fix color issue adding mjpegtools dependecy
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegColorIssue 
     http://www.lavrsen.dk/twiki/bin/view/Motion/MjpegToYUV420pPatch
     (Marius Rieder, Angel Carpintero).     

	
3.2.8 Formal Release - Summary of Changes

Features
   * Added connection status for all devices available from http web interface.
     (Angel Carpintero).
     http://www.lavrsen.dk/twiki/bin/view/Motion/FeatureRequest2006x11x09x050638
   * Improved deb packaging, install the init.d script. (Angel Carpintero).
   * Added swf codec to video creation (Bowser Pete, Andy Brown).
     http://www.lavrsen.dk/twiki/bin/view/Motion/FFmpegSWFcreation
   * Added V4L2 support (Krzysztof Blaszkowski, Angel Carpintero).
     http://www.lavrsen.dk/twiki/bin/view/Motion/VideoForLinuxTwoDiscussion,
   * Added support for V4L2_PIX_FMT_SBGGR8 ( bayer ), V4L2_PIX_FMT_SN9C10X,
     V4L2_PIX_FMT_MJPEG and V4L2_PIX_FMT_UYVY (Angel Carpintero).
   * ucvideo track pan/tilt support ( Michal Licko ,Dirk Wesenberg and
     Angel Carpintero )
     http://www.lavrsen.dk/twiki/bin/view/Motion/LinuxUvcTrackingPatch 
   * Added a FreeBSD directory to allow people from BSD to get a daily version
     and create a port. (Angel Carpintero).
   * Removed mysql dependency from debian package and added a note to setup
     motion to run as daemon to create the pid file. (Angel Carpintero).
   * Changed the way configure search mysql headers and libs, added 3 parameters
     to configure --without-mysql to disable support, --with-mysql-include
     directory of mysql.h and --with-mysql-lib directory of libmysqlclient.a or
     libmysqlclient.so (Angel Carpintero).
   * Added MYSQL_OPT_RECONNECT flag for mysql connection (MYSQL 5.x only) and 
     changed default value for mysql_host (Angel Carpintero).

Bugfixes